Fix body movement due to scrollbar

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -6,6 +6,7 @@
    padding-bottom: 70px;
    color: var(--global-text-color);
    background-color: var(--global-bg-color);
+   overflow: overlay;
  }
 
  body.fixed-top-nav {
